Fix asteriskInterface to run asterisk command correctly.